--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "elfie_home_assetment",
   "type": "module",
   "devDependencies": {
+    "@wdio/allure-reporter": "^9.11.0",
+    "@wdio/appium-service": "^9.12.1",
     "@wdio/cli": "^9.12.1",
     "@wdio/cucumber-framework": "^9.12.1",
     "@wdio/local-runner": "^9.12.1",
     "@wdio/mocha-framework": "^9.12.1",
     "@wdio/spec-reporter": "^9.11.0",
+    "appium": "^2.17.1",
     "appium-uiautomator2-driver": "^4.1.5"
   }
 }
